updating ansible operator docs

--- a/labnotes/specifications/index.html
+++ b/labnotes/specifications/index.html
@@ -633,6 +633,7 @@
 
 
 <div class="gdoc-page__anchorwrap"><h2 id="story---bddgherkin">Story - BDD/Gherkin<a data-clipboard-text="http://localhost/labnotes/specifications/#story---bddgherkin" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor Story - BDD/Gherkin" href="#story---bddgherkin"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
+<p><img src="/assets/specifications-flow-requirements.png" alt=""></p>
 <p><strong>TITLE</strong>: Overeasy Operator Requirements</p>
 <ul>
 <li>
