updating operator docs

--- a/ansible/lab/index.html
+++ b/ansible/lab/index.html
@@ -491,7 +491,7 @@
     
 
 
-<p>Link to Lab: <a href="https://github.com/k8s-operators-over-ez/k8s-operators-over-ez.labs/tree/main/ansible-operator-labs/001">https://github.com/k8s-operators-over-ez/k8s-operators-over-ez.labs/tree/main/ansible-operator-labs/001</a></p>
+<h1 id="lab-linkhttpsgithubcomk8s-operators-over-ezk8s-operators-over-ezlabstreemainansible-operator-labs001"><a href="https://github.com/k8s-operators-over-ez/k8s-operators-over-ez.labs/tree/main/ansible-operator-labs/001">Lab Link</a></h1>
 
 
     </article>
